--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,7 +2,8 @@ html {
     font-size: 62.5%;
 }
 
-body {
+body { 
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 1.6rem;
+    font-size: $m-size;
+    background:$dark-blue;  
 }
