--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,13 +6,18 @@
     color: white;
     font-weight: bold;
     font-size: $l-size;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding: 2.4rem;
     width: 100%;
 }
 
 .big-button:disabled {
     opacity: .5;
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .big-buttom{
+        margin-bottom: $xl-size;
 }
 
 // Button
