Final version including Favicon!

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -16,8 +16,9 @@
 }
 
 @media (min-width: $desktop-breakpoint) {
-    .big-buttom{
+    .big-button{
         margin-bottom: $xl-size;
+    }
 }
 
 // Button
